--- a/app/src/main/res/layout/main_tab_layout.xml
+++ b/app/src/main/res/layout/main_tab_layout.xml
@@ -14,23 +14,26 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         android:paddingTop="6dp"
+        android:paddingEnd="16dp"
         android:paddingBottom="6dp">
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:padding="2dp"
             android:src="@drawable/home" />
 
         <com.mayburger.gojekuiclone.util.textfont.TextFont
             android:id="@+id/title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="4dp"
+            android:gravity="center_vertical"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            app:autoSizeTextType="uniform"
             app:typeface="bold"
             tools:text="Home" />
     </LinearLayout>
