--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -3,7 +3,7 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetEnd="@+id/end"
+        motion:constraintSetEnd="@+id/aEnd"
         motion:constraintSetStart="@id/start"
         motion:duration="1000">
         <OnSwipe
@@ -40,20 +40,33 @@
                 motion:customDimension="200dp" />
         </Constraint>
 
+        <Constraint
+            android:id="@+id/alpha"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0" />
+
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet android:id="@+id/aEnd">
 
         <Constraint
             android:id="@+id/materialCardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="24dp"
             motion:layout_constraintBottom_toBottomOf="parent">
             <PropertySet android:alpha="1" />
             <CustomAttribute
                 motion:attributeName="radius"
                 motion:customDimension="16dp" />
         </Constraint>
+
+        <Constraint
+            android:id="@+id/alpha"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="1" />
 
     </ConstraintSet>
 </MotionScene>
