--- a/app/src/main/res/xml/fragment_food_order_scene.xml
+++ b/app/src/main/res/xml/fragment_food_order_scene.xml
@@ -25,6 +25,25 @@
         </Constraint>
     </ConstraintSet>
 
+    <ConstraintSet
+        android:id="@+id/circle">
+        <Constraint
+            android:id="@+id/card"
+            android:layout_width="100dp"
+            motion:layout_constraintLeft_toLeftOf="parent"
+            motion:layout_constraintRight_toRightOf="parent"
+            android:translationY="-300dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            motion:layout_constraintBottom_toBottomOf="parent">
+            <CustomAttribute
+                motion:attributeName="radius"
+                motion:customDimension="200dp" />
+        </Constraint>
+    </ConstraintSet>
+
     <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@+id/card"
