GrabPay Card final

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red_200">#FF000E</color>
 
     <color name="green_200">#31B057</color>
+    <color name="green_100">#3331B057</color>
     <color name="green_700">#00880D</color>
 
     <color name="teal_200">#FF03DAC5</color>
