--- a/app/src/main/res/layout/activity_grab_pay.xml
+++ b/app/src/main/res/layout/activity_grab_pay.xml
@@ -14,6 +14,7 @@
         android:id="@+id/motionLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#EAECF0"
         app:layoutDescription="@xml/grab_pay_scene"
         tools:context=".ui.grabpay.GrabPayActivity">
 
@@ -21,10 +22,15 @@
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="210dp"
-            android:layout_margin="16dp"
-            android:elevation="8dp"
-            app:cardCornerRadius="160dp"
+            android:layout_margin="38dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="2dp"
             app:layout_constraintTop_toTopOf="parent">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient_card" />
 
             <ImageView
                 android:id="@+id/image"
@@ -70,7 +76,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cardDetails"
+                    android:id="@+id/cardDetail"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginTop="16dp"
@@ -142,5 +148,65 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="128dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/white"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="128dp"
+                android:paddingBottom="16dp">
+
+                <ImageView
+                    android:id="@+id/cardInfo"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/shp_circle_green100"
+                    android:padding="16dp"
+                    android:src="@drawable/ic_cardinfo"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/cardLock"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/cardUnlock"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="16dp"
+                    android:alpha="0"
+                    android:background="@drawable/shp_circle_lightgrey"
+                    android:padding="16dp"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_unlock_grey"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/cardLock"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/shp_circle_green100"
+                    android:padding="18dp"
+                    android:src="@drawable/ic_lock_green"
+                    app:layout_constraintLeft_toRightOf="@id/cardInfo"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
